Fix focus background colour on mobile mega menu

--- a/css/sass/_header.scss
+++ b/css/sass/_header.scss
@@ -141,8 +141,12 @@ header {
     a {
       display: block;
       &:hover {
-        background: none;
         outline: 5px solid #fff;
+      }
+      &:focus {
+        img {
+          background-color: $dark;
+        }
       }
     }
     img {
